--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,12 +4,11 @@
 {% block body %}
   <h1>A Simple Movie Ratings App</h1>
 
-  <h2>Rate movies! Find your community.</h2>
+  <h2>Navigation</h2>
   <ul>
     <li><a href="/movies">View all movies</a></li>
     <li><a href="/users">View all users</a></li>
   </ul>
-
   <h2>Create an Account</h2>
   <form action="/users" method="POST">
     <p>
@@ -23,6 +22,23 @@
     <p>
       <input type="submit">
     </p>
+  
   </form>
+
+  <h2>Already a Member? Log In</h2>
+  <form action='/login'>
+    <p>
+      Email <input type="text" name="email">
+    </p>
+
+    <p>
+      Password <input type="password" name="password">
+    </p>
+
+    <p>
+      <input type="submit" value="Log In">
+    </p>
+  </form>
+  
 {% endblock %}
 
